# etcd3-gateway

./: .coveragerc  .gitreview  .travis.yml  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  requirements.txt  setup-etcd-env.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/api/: autoindex.rst  etcd3gw.client.rst  etcd3gw.lease.rst  etcd3gw.lock.rst  etcd3gw.utils.rst
etcd3-gateway/: __init__.py
etcd3-gateway/tests/: test_etcd3-gateway.py
etcd3gw/: __init__.py  client.py  exceptions.py  lease.py  lock.py  utils.py  watch.py
etcd3gw/examples/: etcd.py  watcher.py
etcd3gw/tests/: test_client.py  test_etcd3gw.py
releasenotes/source/: conf.py  index.rst
