[metadata]
name = etcd3gw
summary = A python client for etcd3 grpc-gateway v3 API
description-file =
    README.md
author = Davanum Srinivas
author-email = davanum@gmail.com
home-page = https://github.com/dims/etcd3-gateway
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    etcd3gw

[pbr]
warnerrors = True

[wheel]
universal = 1

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = etcd3gw/locale
domain = etcd3gw

[update_catalog]
domain = etcd3gw
output_dir = etcd3gw/locale
input_file = etcd3gw/locale/etcd3gw.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = etcd3gw/locale/etcd3gw.pot
